--- a/HTML/ARIA.html
+++ b/HTML/ARIA.html
@@ -88,9 +88,9 @@
 
       <h4>Method 2: Using `for` and `id` (Explicit Association)</h4>
       <p>
-        This is the most common and robust method. The <code>for</code> attribute
-        of the <code>&lt;label&gt;</code> must match the <code>id</code> of the
-        <code>&lt;input&gt;</code>.
+        This is the most common and robust method. The
+        <code>for</code> attribute of the <code>&lt;label&gt;</code> must match
+        the <code>id</code> of the <code>&lt;input&gt;</code>.
       </p>
       <pre>
 <code>&lt;label for="user_email"&gt;Enter your email:&lt;/label&gt;
@@ -135,8 +135,8 @@
           <strong>Properties:</strong> Define characteristics or relationships.
           <ul>
             <li>
-              <strong>Example:</strong> Marking an input as required or linking a
-              custom control to its label.
+              <strong>Example:</strong> Marking an input as required or linking
+              a custom control to its label.
             </li>
             <li>
               <pre>
