--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,9 +21,7 @@
     <hr />
 
     <!-- Paragraph and Preformatted Text Tags: <p> for paragraphs, <pre> to preserve whitespace. -->
-    <p>
-      to, vikas kumar, 123456, address:abc,India
-    </p>
+    <p>to, vikas kumar, 123456, address:abc,India</p>
 
     <pre>
         to,
@@ -92,7 +90,13 @@
     <!-- Form and Input Tags: For user input. -->
     <form action="#" method="post">
       <!-- Text input -->
-      <input type="text" name="name" id="" placeholder="enter your name" required />
+      <input
+        type="text"
+        name="name"
+        id=""
+        placeholder="enter your name"
+        required
+      />
       <br />
 
       <!-- Email input with validation -->
