--- a/HTML/form.html
+++ b/HTML/form.html
@@ -34,7 +34,8 @@
             type="text"
             name="fullname"
             id=""
-            placeholder="enter your name" required
+            placeholder="enter your name"
+            required
           />
           <br />
           <br />
@@ -43,7 +44,8 @@
             type="email"
             name="email"
             id=""
-            placeholder="enter your email" required
+            placeholder="enter your email"
+            required
           />
         </fieldset>
 
@@ -54,7 +56,8 @@
             type="text"
             name="number"
             id=""
-            placeholder="enter your mobile" required
+            placeholder="enter your mobile"
+            required
           />
         </fieldset>
         <br />
