Initialize React project with Vite, Tailwind CSS, and ESLint setup. Add example components demonstrating various React concepts including event handling, conditional rendering, list rendering, props, state management, and controlled vs uncontrolled components. Include SVG assets and basic styling.

--- a/HTML/data.html
+++ b/HTML/data.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      #container {
+        width: 400px;
+        height: 400px;
+        background-color: red;
+        padding: 10px;
+        border: 6px solid black;
+        margin: 30px;
+      }
+    </style>
   </head>
   <body>
-    <h1>this is where data will be coming</h1>
+    <div id="container">this is sample div</div>
   </body>
 </html>
